# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import ordersRouter from "./orders";
 import adminRouter from "./admin";
+import socialLinksRouter from "./social-links";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(ordersRouter);
 router.use(adminRouter);
+router.use(socialLinksRouter);
 
 export default router;
